[package]
name = "ids"
version = "0.1.0"
edition = "2024"

[dependencies]
dotenvy = { version = "0.15.7" }
pnet = "0.35.0"
rayon = "1.11"
serde = { version = "1.0.228", features = ["derive"] }
simple-dns = "0.11.0"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "tracing", "sync"] }
toml = "0.9.8"
tracing = { version = "0.1", features = ["release_max_level_debug"] }
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter", "tracing"] }
ttlhashmap = "0.1.0"

